2005-11-29 Mikhail Khodjaiants
	Partial fix for bug 118114: Cannot view typedef'ed array in debugger.
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/VariableDescriptor.java
	
2005-11-29 Mikhail Khodjaiants
	Bug 100298: [Memory View] Changing variable's value from variables view or memory view doesn't sync to each other.
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Variable.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/MemoryBlock.java

2005-11-02 Mikhail Khodjaiants
	Bug 113364: Wrong values displaying an array of structures.
	Previous fix didn't work for classes with access specifiers.
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/VariableManager.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/VariableDescriptor.java

2005-10-21 Mikhail Khodjaiants
	Bug 113364: Wrong values displaying an array of structures.
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/VariableManager.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/VariableDescriptor.java

2005-10-18 Mikhail Khodjaiants
	Bug 106632: Invalid detail value for arrays with dimension greater than 100.
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Variable.java

2005-10-18 Mikhail Khodjaiants
	Bug 111568: Fix for corrupt stack messages not working.
	Applied patch from Timesys.
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Thread.java

2005-09-01 Mikhail Khodjaiants
	Bug 108636: mi level selection option should be moved to the gdb page.
	* src/org/eclipse/cdt/debug/mi/core/GDBCDIDebugger.java
	* src/org/eclipse/cdt/debug/mi/core/GDBServerCDIDebugger.java
	* src/org/eclipse/cdt/debug/mi/core/IMILaunchConfigurationConstants.java
	* src/org/eclipse/cdt/debug/mi/core/MIPlugin.java

2005-09-01 Mikhail Khodjaiants
	Bug 108424: Debugger stops on removed breakpoints.
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/BreakpointManager.java

2005-08-31 Alain Magloire
	Improve performance by caching the type result on the frame
	and on the RegisterManager.  The patch is originally from Chris Wiebe
	with modifications.