@@ -1,3 +1,12 @@
+2005-12-20 Mikhail Khodjaiants
+	Bug 120390: Avoiding .gdbinit
+	* GDBCDIDebugger.java
+	* GDBDebugger.java
+	* GDBServerCDIDebugger.java
+	* GDBServerDebugger.java
+	* IMILaunchConfigurationConstants.java
+	* MIPlugin.java
+
 2005-11-29 Mikhail Khodjaiants
 	Partial fix for bug 118114: Cannot view typedef'ed array in debugger.
 	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/VariableDescriptor.java
